Add uniqueness constraint to text search
- index has a 3rd argument that specifies a column
that will be unique in the search results.
- scope unique_search was added. values of the
unique column are distinct. Only the row with the
highest rank is returned if multiple rows are
found for the unique column.

--- a/README.rdoc
+++ b/README.rdoc
@@ -70,12 +70,24 @@ Declare your indexes as you normally would:
 		index { title }
 	end
 	
-Finally, say hello to #tsearch:
+Say hello to #tsearch:
 
 	Book.create :title => "_why's Poignant Guide to Ruby"
 	Book.tsearch "_whys Poignnt Gd t Rb" # => [#<Book title: "_why's Poignant Guide to Ruby">]
 	
 Trigram searching is still in beta, so expect the API to change and/or improve.
+
+
+Return results with a uniqueness constraint on one of the columns of the searchable table:
+
+  class Product < ActiveRecord::Base
+    index('mysearch', 'english', 'producer_id') do
+      name
+      description
+    end
+  end
+
+  Product.unique_search("smartphone")
 
 == REQUIREMENTS:
 
